Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,60 +1,70 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="chrome=1">
-		<title>500pxupload by mrhieu</title>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>500pxupload by mrhieu</title>
 
-		<link rel="stylesheet" href="stylesheets/styles.css">
-		<link rel="stylesheet" href="stylesheets/pygment_trac.css">
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-		<!--[if lt IE 9]>
-		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
-	</head>
-	<body>
-		<div class="wrapper">
-			<header>
-				<h1>500pxupload</h1>
-				<p>500px-like Photo Uploader</p>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>500pxupload</h1>
+        <p>500px-like Photo Uploader</p>
 
-				<p class="view"><a href="https://github.com/mrhieu/500pxupload">View the Project on GitHub <small>mrhieu/500pxupload</small></a></p>
+        <p class="view"><a href="https://github.com/mrhieu/500pxupload">View the Project on GitHub <small>mrhieu/500pxupload</small></a></p>
 
 
-				<ul>
-					<li><a href="https://github.com/mrhieu/500pxupload/zipball/master">Download <strong>ZIP File</strong></a></li>
-					<li><a href="https://github.com/mrhieu/500pxupload/tarball/master">Download <strong>TAR Ball</strong></a></li>
-					<li><a href="https://github.com/mrhieu/500pxupload">View On <strong>GitHub</strong></a></li>
-				</ul>
-			</header>
-			<section>
-				<h1>
-<a name="500px-like-photo-uploader" class="anchor" href="#500px-like-photo-uploader"><span class="octicon octicon-link"></span></a>500px-like Photo Uploader</h1>
-
-<h3>
-<a name="build-a-photo-uploader-with-500pxcom-inspired" class="anchor" href="#build-a-photo-uploader-with-500pxcom-inspired"><span class="octicon octicon-link"></span></a>Build a photo uploader with 500px.com-inspired.</h3>
-
-<p><a href="/500pxupload/demo"><img src="https://raw.github.com/mrhieu/500pxupload/b94f090ee11d6023d2eaae3fcd66f96bd696fad8/img/preview.jpg" alt="preview"></a></p>
+        <ul>
+          <li><a href="https://github.com/mrhieu/500pxupload/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/mrhieu/500pxupload/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/mrhieu/500pxupload">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h1>
+<a id="500px-like-photo-uploader" class="anchor" href="#500px-like-photo-uploader" aria-hidden="true"><span class="octicon octicon-link"></span></a>500px-like Photo Uploader</h1>
 
 <h3>
-<a name="feel-free-to-modify-and-re-use" class="anchor" href="#feel-free-to-modify-and-re-use"><span class="octicon octicon-link"></span></a>Feel free to modify and re-use.</h3>
+<a id="build-a-photo-uploader-with-500pxcom-inspired" class="anchor" href="#build-a-photo-uploader-with-500pxcom-inspired" aria-hidden="true"><span class="octicon octicon-link"></span></a>Build a photo uploader with 500px.com-inspired.</h3>
+
+<p><img src="https://raw.github.com/mrhieu/500pxupload/b94f090ee11d6023d2eaae3fcd66f96bd696fad8/img/preview.jpg" alt="preview"></p>
 
 <h3>
-<a name="see-a-demo-at-here-anyway-i-didnt-setup-server-side-for-public-access-any-ideas-" class="anchor" href="#see-a-demo-at-here-anyway-i-didnt-setup-server-side-for-public-access-any-ideas-"><span class="octicon octicon-link"></span></a>See a demo <a href="/500pxupload/demo">here</a>.</h3>
+<a id="feel-free-to-modify-and-use-in-your-projects" class="anchor" href="#feel-free-to-modify-and-use-in-your-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Feel free to modify and use in your projects.</h3>
+
+<h3>
+<a id="see-a-demo-here" class="anchor" href="#see-a-demo-here" aria-hidden="true"><span class="octicon octicon-link"></span></a>See a demo <a href="http://mrhieu.github.io/500pxupload/demo">here</a>
+</h3>
 
 <h2>
-<a name="feature" class="anchor" href="#feature"><span class="octicon octicon-link"></span></a>Feature</h2>
+<a id="how-to-run" class="anchor" href="#how-to-run" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to run</h2>
+
+<pre><code>$ npm install
+$ grunt serve
+</code></pre>
+
+<h2>
+<a id="feature" class="anchor" href="#feature" aria-hidden="true"><span class="octicon octicon-link"></span></a>Feature</h2>
 
 <ul>
-<li>Drag and drop</li>
+<li>Drag and drop files</li>
 <li>Multiple upload</li>
 <li>Preview thumnail</li>
 <li>Exif reading</li>
 <li>Location display on the map</li>
 <li>Preview processing item (while server side run some background process)</li>
 <li>Crop (in To-do list)</li>
-</ul><h2>
-<a name="made-with-these-bundles" class="anchor" href="#made-with-these-bundles"><span class="octicon octicon-link"></span></a>Made with these bundles</h2>
+</ul>
+
+<h2>
+<a id="made-with-these-bundles" class="anchor" href="#made-with-these-bundles" aria-hidden="true"><span class="octicon octicon-link"></span></a>Made with these bundles</h2>
 
 <ul>
 <li><a href="http://jquery.com">Jquery</a></li>
@@ -67,8 +77,10 @@
 <li><a href="https://github.com/blueimp/JavaScript-Templates">Javascript Template Engine</a></li>
 <li><a href="http://ivaynberg.github.io/select2/">Select2</a></li>
 <li>and more</li>
-</ul><h2>
-<a name="browser-compatibility-need-more-test" class="anchor" href="#browser-compatibility-need-more-test"><span class="octicon octicon-link"></span></a>Browser Compatibility (need more test)</h2>
+</ul>
+
+<h2>
+<a id="browser-compatibility-need-more-test" class="anchor" href="#browser-compatibility-need-more-test" aria-hidden="true"><span class="octicon octicon-link"></span></a>Browser Compatibility (need more test)</h2>
 
 <ul>
 <li>Chrome (latest)</li>
@@ -77,67 +89,33 @@
 <li>Safari (latest)</li>
 <li>Chrome mobile (latest)</li>
 <li>Safari mobile (latest)</li>
-</ul><h2>
-<a name="to-do-list" class="anchor" href="#to-do-list"><span class="octicon octicon-link"></span></a>To-do list</h2>
+</ul>
+
+<h2>
+<a id="to-do-list" class="anchor" href="#to-do-list" aria-hidden="true"><span class="octicon octicon-link"></span></a>To-do list</h2>
 
 <ul>
 <li>Client-side crop image</li>
-</ul><p>Maintained by Hieu Pham (<a href="mailto:mr_hie@yahoo.com">mr_hie@yahoo.com</a> | <a href="https://github.com/mrhieu" class="user-mention">@mrhieu</a>)</p>
+</ul>
 
- <div id="disqus_thread"></div>
-    <script type="text/javascript">
-        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = '500pxupload'; // required: replace example with your forum shortname
+<p>Maintained by Hieu Pham (<a href="mailto:mr_hie@yahoo.com">mr_hie@yahoo.com</a> | <a href="https://github.com/mrhieu" class="user-mention">@mrhieu</a>)</p>
+      </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/mrhieu">mrhieu</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-26188758-6");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
 
-        /* * * DON'T EDIT BELOW THIS LINE * * */
-        (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-    
-
-			</section>
-			<footer>
-				<p>This project is maintained by <a href="https://github.com/mrhieu">mrhieu</a></p>
-				<p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-			</footer>
-		</div>
-		<script src="javascripts/scale.fix.js"></script>
-							<script type="text/javascript">
-						var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-						document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-					</script>
-					<script type="text/javascript">
-						try {
-							var pageTracker = _gat._getTracker("UA-26188758-6");
-						pageTracker._trackPageview();
-						} catch(err) {}
-					</script>
-					
-					<!-- AddThis Smart Layers BEGIN -->
-<!-- Go to http://www.addthis.com/get/smart-layers to customize -->
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4e72fd7107058ce5"></script>
-<script type="text/javascript">
-  addthis.layers({
-    'theme' : 'transparent',
-    'share' : {
-      'position' : 'right',
-      'numPreferredServices' : 5
-    }, 
-    'follow' : {
-      'services' : [
-        {'service': 'facebook', 'id': 'mrhieu'},
-        {'service': 'twitter', 'id': 'mrhieu'},
-        {'service': 'linkedin', 'id': 'hieupv'},
-        {'service': 'google_follow', 'id': '107139333698405248003/posts'}
-      ]
-    }   
-  });
-</script>
-<!-- AddThis Smart Layers END -->
-	</body>
+  </body>
 </html>
